--- a/packages/core/src/sass/app/modules/reset-password.scss
+++ b/packages/core/src/sass/app/modules/reset-password.scss
@@ -73,8 +73,8 @@
     }
     &__error {
         width: 38.4rem;
-        height: 28.4rem;
-        padding: 2rem 0;
+        min-height: 28.4rem;
+        padding-top: 2rem;
         text-align: center;
     }
     &__lead {
