fix: changed tradinghub to tradershub

--- a/packages/core/src/sass/app/_common/layout/trading-hub-header.scss
+++ b/packages/core/src/sass/app/_common/layout/trading-hub-header.scss
@@ -60,7 +60,7 @@
         }
     }
 
-    &__tradinghub {
+    &__tradershub {
         display: flex;
         justify-content: center;
         align-items: center;
