--- a/packages/core/src/sass/app/_common/layout/header.scss
+++ b/packages/core/src/sass/app/_common/layout/header.scss
@@ -200,17 +200,17 @@
         }
     }
 
-    &__menu--trading-hub {
+    &__menu--traders-hub {
         padding: 1.5rem;
     }
 
-    &__menu--trading-hub-container {
+    &__menu--traders-hub-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
-    &__menu--explore-trading-hub {
+    &__menu--explore-traders-hub {
         border-radius: 1rem;
         width: 25.5rem;
 
@@ -224,7 +224,7 @@
         }
     }
 
-    &__menu--exit-trading-hub {
+    &__menu--exit-traders-hub {
         border-radius: 1rem;
         width: 90%;
         &--dark {
@@ -232,11 +232,11 @@
         }
     }
 
-    &__menu--trading-hub-beta-icon {
+    &__menu--traders-hub-beta-icon {
         margin: 0 4rem 0 1rem;
     }
 
-    &__menu--exit-trading-hub-beta-icon {
+    &__menu--exit-traders-hub-beta-icon {
         margin: 0 7rem 0 1rem;
     }
 
