chore: increase specificity for dropdown selector

--- a/packages/appstore/src/components/main-title-bar/account-type-dropdown.scss
+++ b/packages/appstore/src/components/main-title-bar/account-type-dropdown.scss
@@ -1,60 +1,62 @@
 .account-type-dropdown {
-    &--parent {
-        padding: 0;
-        border: none;
-    }
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 2rem;
     text-transform: capitalize;
     border: 2px solid;
+    height: 2.4em;
+
+    &--parent {
+        padding: 0;
+        border: none;
+        & > div.dc-dropdown {
+            &-container {
+                min-width: 8.2rem;
+                width: 8.2rem;
+            }
+        }
+    }
 
     &:focus,
     &:hover {
         outline: none;
     }
-
     &--real,
-    &--real:focus,
-    &--real:hover {
-        border: 2px solid var(--status-info);
-        color: var(--status-info);
-    }
-
-    &--demo,
-    &--demo:focus,
-    &--demo:hover {
-        border: 2px solid var(--status-success);
-        color: var(--status-success);
-    }
-    &__icon {
-        &--real {
-            --fill-color1: var(--status-info) !important;
-        }
-        &--demo {
-            --fill-color1: var(--status-success) !important;
-        }
-    }
-}
-.dc-dropdown {
-    &-container {
-        min-width: 8.2rem;
-        width: 8.2rem;
-        --fill-color1: currentColor;
-    }
-    &__display {
-        height: 2.4em;
-        &-text {
-            color: currentColor;
+    &--demo {
+        & > .dc-text {
             font-weight: 700;
             line-height: 20px;
             letter-spacing: 0em;
             text-align: left;
         }
     }
-    &__select-arrow {
-        &--up {
-            transform: none;
+    &--real,
+    &--real:focus,
+    &--real:hover {
+        border: 2px solid var(--status-info);
+        & > .dc-text {
+            color: var(--status-info);
+        }
+    }
+
+    &--demo,
+    &--demo:focus,
+    &--demo:hover {
+        border: 2px solid var(--status-success);
+        & > .dc-text {
+            color: var(--status-success);
+        }
+    }
+    &__icon {
+        &--real,
+        &--demo {
+            transform: none !important;
+        }
+        &--real {
+            --fill-color1: var(--status-info) !important;
+        }
+        &--demo {
+            --fill-color1: var(--status-success) !important;
         }
     }
 }
